--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Syne+Tactile&display=swap');
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +6,27 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+ 
+  
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.container-pokemons{
+  margin-left: auto;
+  margin-right: auto;
+  width: 8rem;  
+  font-family: 'Syne Tactile', cursive;
+  color : #2F4F4F;
+  text-align: center;
+  display:block;
+}
+#ID, #Name, #HP, #Speed, #Defense, #Base,#Attack{
+  font-size: 3rem;
+}
+#hr1{
+  border : 3px dotted #2F4F4F;
 }
